--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "plumbpkg"]
 	path = plumbpkg
-	url = git@github.com:actuarialvoodoo/plumbpkg.git
+	url = https://github.com/actuarialvoodoo/plumbdocker.git 
